# UniversalUI-GSP

./: README.md
cpp/UniversalUI/: CMakeLists.txt
cpp/UniversalUI/include/UniversalUI/: UApplication.hpp  UWindow.hpp
cpp/UniversalUI/src/: UApplication.cpp
cpp/UniversalUI/test/: main.cpp
dotnet/UniversalUI/: .gitignore  Program.cs
dotnet/UniversalUI/GSPCore/: GApplication.cs  GLog.cs  GSPCore.cs  GWindow.cs
dotnet/UniversalUI/UniversalUI/: GSPCore.cs  UApplication.cs  UWindow.cs
